# Mycotacao

./: .gitignore  README.md  ajuda.mf  modelo de cotacao.txt  pyproject.toml  requirements.txt  script_config  settings_site.py  teste.xlsx
mycotacao/: db.sqlite3  manage.py
mycotacao/appCotacao/: admin.py  apps.py  banco_dados.py  db.sqlite3  formularios.py  models.py  opdb.py  urls.py  views.py
mycotacao/appCotacao/core/: apoio.py  constantes.py  cotacao.py  excel.py  tabela_cotacao.py
mycotacao/appCotacao/migrations/: 0001_initial.py  0002_alter_lance_unique_together_estrutura_lances_and_more.py  0002_fornecedor_dono.py  0002_rename_nomeempresa_customuser_nome_fornecedor.py  0003_alter_lance_options_remove_estrutura_lance_vencedor_and_more.py  0003_estrutura_fornecedor_lance_dono_projeto_fornecedor_and_more.py  0003_remove_projeto_produtos_projeto_produtos.py  0004_auto_20250302_0013.py  0004_remove_projeto_produtos_projeto_produto.py  0005_auto_20250302_0020.py  0005_remove_projeto_fornecedores_remove_projeto_produto.py  0006_auto_20250302_0021.py  0006_projeto_produtos.py  0007_remove_projeto_produtos_produto_projetos.py  0007_rename_estrutura_cotacao_alter_projeto_fornecedor.py  0008_remove_cotacao_volume_cotacao_ultimo_lance_and_more.py  0010_alter_cotacao_status.py  (+16 more)
mycotacao/data/: modelo.xlsx  relatorio.xlsx  temp_cotacao.xlsx
mycotacao/mycotacao/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: start.ps1  start_server.sh
venv-django-4/: pyvenv.cfg
venv-django-4/Scripts/: activate  activate.bat
wireframe/: .~lock.esboço.odg#  esboço.odg
(+20 files in other folders)
