[tool.poetry]
name = "mycotacao"
version = "0.1.0"
description = ""
authors = ["Joao"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django=4.0

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my-script = "my_package.log_revision:start"